Ajustes na responsividade e no readme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="name-info">
         <p class="name">Izabelle Alves</p>
         <p class="name-city">Recife, Brasil</p>
-        <p class="name-area">"Junior Front-End Developer"</p>
+        <p class="name-area">"Front-End Developer"</p>
       </div>
       <div class="links">
         <a href="https://www.linkedin.com/in/izabellealvess/">LinkedIn</a>
